Aggiornato ambiente kube-cluster

--- a/environments/kube-cluster/Vagrantfile
+++ b/environments/kube-cluster/Vagrantfile
@@ -2,24 +2,25 @@
 # vi: set ft=ruby :
 
 # 
-# Vagrantfile per un cluster Kubernetes composto da tre nodi (un master e due worker) 
-# e da un nodo esterno al cluster per lo sviluppo. 
+# Vagrantfile per un cluster Kubernetes composto 
+# da tre VM (una per il control plane e due nodi worker) 
+# e da una VM esterna al cluster per lo sviluppo. 
 # 
 
 Encoding.default_internal = Encoding.find('Windows-1250') 
 
-KUBE_CLUSTER_MASTER_IP='10.11.1.71'
+KUBE_CLUSTER_CONTROL_PLANE_IP='10.11.1.71'
 
 KUBE_CLUSTER_NODES = [
     {
         :name => "kube-1",
-        :type => "master",
+        :type => "control-plane",
         :box => "bento/ubuntu-22.04",
         :eth1 => "10.11.1.71",
         :httpport => "8081",
         :ingressport => "31081",
-        :memory => "2048",
-        :cpus => "2", 
+        :memory => "3072",
+        :cpus => "3", 
         :cpuexecutioncap => "100" 
     },
     {
@@ -29,8 +30,8 @@ KUBE_CLUSTER_NODES = [
         :eth1 => "10.11.1.72",
         :httpport => "8082",
         :ingressport => "31082",
-        :memory => "2048",
-        :cpus => "2", 
+        :memory => "3072",
+        :cpus => "3", 
         :cpuexecutioncap => "100" 
     },
     {
@@ -40,8 +41,8 @@ KUBE_CLUSTER_NODES = [
         :eth1 => "10.11.1.73",
         :httpport => "8083",
         :ingressport => "31083",
-        :memory => "2048",
-        :cpus => "2", 
+        :memory => "3072",
+        :cpus => "3", 
         :cpuexecutioncap => "100" 
     },
     {
@@ -111,12 +112,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 				node.vm.network "forwarded_port", guest: 8153, host: opts[:gocdport], id: 'gocd', auto_correct: true
 			end
 
-			node.vm.provision "shell" do |s| 
-				s.inline = ASW_RESOURCES + "kube-cluster/configure-kube-cluster-env-variables.sh $1 $2 $3 $4"
-				s.args = ["10.11.1.70", "kube-cluster", "kube-", 3]
-				# starting ip, cluster domain, node name prefix, number of nodes 
-			end 
-
 			# 
 			# development tools 
 			#
@@ -126,6 +121,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 				node.vm.provision :shell, :inline => ASW_RESOURCES + "java/setup-open-jdk.sh"
 				node.vm.provision :shell, :inline => ASW_RESOURCES + "java/setup-gradle.sh"
 				node.vm.provision :shell, :inline => ASW_RESOURCES + "java/setup-maven.sh"
+				# installa Python e alcune librerie per REST 
+				node.vm.provision :shell, :inline => ASW_RESOURCES + "python/setup-python.sh"
+				node.vm.provision :shell, :inline => ASW_RESOURCES + "python/setup-python-rest-libraries.sh"
 				
 				# crea un link simbolico alla cartella dei progetti asw nella cartella dell'utente di default 
 				# node.vm.provision :shell, :inline => 'ln -s /home/asw/projects projects'				
@@ -138,7 +136,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 				# installa docker  
 				node.vm.provision :shell, :inline => ASW_RESOURCES + "docker/prepare-docker.sh"
 				node.vm.provision :shell, :inline => ASW_RESOURCES + "docker/setup-docker.sh"
-            else # opts[:type] == "master" || opts[:type] == "worker"
+            else # opts[:type] == "control-plane" || opts[:type] == "worker"
 				# installa containerd  
 				node.vm.provision :shell, :inline => ASW_RESOURCES + "kube-cluster/setup-containerd.sh"
             end
@@ -146,14 +144,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 			# 
 			# kubernetes 
 			#
-            if opts[:type] == "master"
+            if opts[:type] == "control-plane"
 				node.vm.provision "shell" do |s| 
 					s.inline = ASW_RESOURCES + "kube-cluster/configure-kube-cluster-hosts.sh $1 $2 $3 $4"
-					s.args = ["10.11.1.70", "kube-cluster", "kube-", 3]
+					s.args = ["10.11.1.70", "kube-", 1, 2]
 				end 
 				node.vm.provision :shell, :inline => ASW_RESOURCES + "kube-cluster/setup-kubernetes-kubeadm.sh"
 				node.vm.provision "shell" do |s| 
-					s.inline = ASW_RESOURCES + "kube-cluster/start-kube-cluster-master.sh $1"
+					s.inline = ASW_RESOURCES + "kube-cluster/start-kube-cluster-control-plane.sh $1"
 					s.args = [POD_NETWORK_CIDR]
 				end 
 				node.vm.provision :shell, :inline => ASW_RESOURCES + "kube-cluster/setup-helm.sh"
@@ -161,28 +159,29 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 					s.inline = ASW_RESOURCES + "kube-cluster/setup-kube-cluster-calico-network-addon.sh $1"
 					s.args = [POD_NETWORK_CIDR]
 				end 
-                node.vm.provision :shell, :inline => ASW_RESOURCES + "kube-cluster/setup-kube-cluster-ingress-nginx-addon.sh"
-				# in alternativa: 
-                # node.vm.provision :shell, :inline => ASW_RESOURCES + "kube-cluster/setup-kube-cluster-nginx-ingress-addon.sh"
+				# ingress controller (ascolta su 80): 
+                node.vm.provision :shell, :inline => ASW_RESOURCES + "kube-cluster/setup-kube-cluster-nginx-ingress-addon.sh"
+				# in alternativa (ma ascolta solo su 31080); 
+                # node.vm.provision :shell, :inline => ASW_RESOURCES + "kube-cluster/setup-kube-cluster-ingress-nginx-addon.sh"
             elsif opts[:type] == "worker"
 				node.vm.provision "shell" do |s| 
 					s.inline = ASW_RESOURCES + "kube-cluster/configure-kube-cluster-hosts.sh $1 $2 $3 $4"
-					s.args = ["10.11.1.70", "kube-cluster", "kube-", 3]
+					s.args = ["10.11.1.70", "kube-", 1, 2]
 				end 
 				node.vm.provision :shell, :inline => ASW_RESOURCES + "kube-cluster/setup-kubernetes-kubeadm.sh"
 				node.vm.provision "shell" do |s| 
 					s.inline = ASW_RESOURCES + "kube-cluster/start-kube-cluster-worker.sh $1"
-					s.args = [KUBE_CLUSTER_MASTER_IP]
+					s.args = [KUBE_CLUSTER_CONTROL_PLANE_IP]
 				end 
             else # opts[:type] == "dev" 
 				node.vm.provision "shell" do |s| 
 					s.inline = ASW_RESOURCES + "kube-cluster/configure-kube-cluster-dev-hosts.sh $1 $2 $3 $4"
-					s.args = ["10.11.1.70", "kube-cluster", "kube-", 3]
+					s.args = ["10.11.1.70", "kube-", 1, 2]
 				end 
 				node.vm.provision :shell, :inline => ASW_RESOURCES + "kube-cluster/setup-kubernetes-kubeadm-client.sh"
 				node.vm.provision "shell" do |s| 
 					s.inline = ASW_RESOURCES + "kube-cluster/configure-kube-cluster-client.sh $1"
-					s.args = [KUBE_CLUSTER_MASTER_IP]
+					s.args = [KUBE_CLUSTER_CONTROL_PLANE_IP]
 				end 
 				node.vm.provision :shell, :inline => ASW_RESOURCES + "kube-cluster/setup-helm.sh"
             end
