Aggiornato progetto asw-890-kubernetes

--- a/projects/asw-890-kubernetes/m-sentence-application/sentence-application.yaml
+++ b/projects/asw-890-kubernetes/m-sentence-application/sentence-application.yaml
@@ -131,9 +131,9 @@ spec:
       containers:
       - name: sentence-container
         image: aswroma3/sentence-sentence-kube:2023-10
-#        env: 
-#        - name: ASW_SENTENCE_SENTENCESERVICE_INSTANCENAME
-#          value: S-SYNC
+        env: 
+        - name: ASW_SENTENCE_SENTENCESERVICE_INSTANCENAME
+          value: S-SYNC
 #        - name: ASW_SENTENCE_SENTENCESERVICE_DELAY
 #          value: "50"
         ports:
@@ -157,51 +157,51 @@ spec:
 #          periodSeconds: 10
 #          failureThreshold: 30 
 
-#---
-#apiVersion: apps/v1
-#kind: Deployment
-#metadata:
-#  name: sentence-async
-#spec:
-#  replicas: 1
-#  selector:
-#    matchLabels:
-#      app: sentence
-#      service: sentence
-#  template: 
-#    metadata:
-#      labels:
-#        app: sentence
-#        service: sentence
-#    spec:
-#      containers:
-#      - name: sentence-async-container
-#        image: aswroma3/sentence-sentence-async-kube:2023-10
-#        env: 
-#        - name: ASW_SENTENCE_SENTENCESERVICE_INSTANCENAME
-#          value: S-ASYNC
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: sentence-async
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: sentence
+      service: sentence
+  template: 
+    metadata:
+      labels:
+        app: sentence
+        service: sentence
+    spec:
+      containers:
+      - name: sentence-async-container
+        image: aswroma3/sentence-sentence-async-kube:2023-10
+        env: 
+        - name: ASW_SENTENCE_SENTENCESERVICE_INSTANCENAME
+          value: S-ASYNC
 #        - name: ASW_SENTENCE_SENTENCESERVICE_DELAY
 #          value: "50"
-#        ports:
-#        - containerPort: 8080
-#        livenessProbe: 
-#          httpGet: 
-#            path: /actuator/health
-#            port: 8080
-#          periodSeconds: 5
-#          failureThreshold: 3 
-#          initialDelaySeconds: 180
-#        readinessProbe: 
+        ports:
+        - containerPort: 8080
+        livenessProbe: 
+          httpGet: 
+            path: /actuator/health
+            port: 8080
+          periodSeconds: 5
+          failureThreshold: 3 
+          initialDelaySeconds: 180
+        readinessProbe: 
+          httpGet: 
+            path: /actuator/health
+            port: 8080
+          periodSeconds: 10
+#        startupProbe: 
 #          httpGet: 
 #            path: /actuator/health
 #            port: 8080
 #          periodSeconds: 10
-##        startupProbe: 
-##          httpGet: 
-##            path: /actuator/health
-##            port: 8080
-##          periodSeconds: 10
-##          failureThreshold: 30 
+#          failureThreshold: 30 
 
 ---
 apiVersion: apps/v1
@@ -322,8 +322,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sentence
-#  annotations:
-#    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
