--- a/projects/asw-890-kubernetes/n-sentence-application-helm/sentence/values.yaml
+++ b/projects/asw-890-kubernetes/n-sentence-application-helm/sentence/values.yaml
@@ -6,7 +6,7 @@ sentence:
   image: 
     version: "2023-10"
   withasync: true 
-  withnames: false 
+  withnames: true 
   withdelays: false
   sentence: 
     replicas: 1
