--- a/projects/asw-890-kubernetes/n-sentence-application-helm/sentence-application-multi.yaml
+++ b/projects/asw-890-kubernetes/n-sentence-application-helm/sentence-application-multi.yaml
@@ -322,6 +322,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sentence
+#  annotations:
+#    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
