--- a/projects/asw-order-manager/docker-compose.yml
+++ b/projects/asw-order-manager/docker-compose.yml
@@ -99,4 +99,5 @@ services:
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      # Automatic topics
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
